--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
